# metallium

./: Cargo.toml  build.rs
low/: compile.sh  x64.s
scripts/: all.sh  build.sh  rust.sh
src/: debug.rs  main.rs
src/interrupts/: apic.rs  ioapic.rs  mod.rs
src/low/: mod.rs  ports.rs  processor.rs
src/low/x64/: mod.rs  serial.rs
src/memory/: kernel_allocator.rs  mapper.rs  mod.rs  paging_table.rs  physical_buddy_allocator.rs
