[package]
name = "kernel"
version = "0.1.0"
authors = ["Joonas Lehto <joonas.eemil.lehto@gmail.com>"]
edition = "2021"
build = "build.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
volatile = "0.6.1"
spin = "0.9.8"
x86_64 = "0.15.1"
uart_16550 = "0.3.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]